@@ -28,13 +28,7 @@ history(max.show = 25, reverse = FALSE)
   This works in Rgui and interactive Rterm but not in batch use of Rterm
   nor in embedded/DCOM versions.
 
-  The history mechanism is controlled by two environment variables read
-  at the beginning of the session; \code{R_HISTSIZE} controls the number
-  of lines retained (and hence that can be saved: default 512), and
-  \code{R_HISTFILE} sets the filename used for the loading/saving of
-  history if requested at the beginning/end of a session (but not the
-  default for these functions).  When a history file is loaded, only the
-  last \code{R_HISTSIZE} lines are retained.
+  The history mechanism is controlled by two environment
 #endif
 #ifdef unix
   This works under the \code{readline} and GNOME and MacOS X consoles,
@@ -42,14 +36,17 @@ history(max.show = 25, reverse = FALSE)
   or in an embedded application).
 
   The \code{readline} history mechanism is controlled by two environment
-  variables (read at time of saving); \code{R_HISTSIZE} controls the
-  number of lines that are saved (default 512), and \code{R_HISTFILE}
-  sets the filename used for the loading/saving of history if requested
-  at the beginning/end of a session (but not the default for these
-  functions).  There is no limit on the number of lines of history
-  retained during a session, so setting \code{R_HISTSIZE} to a large
-  value has no penalty unless a large file is actually generated.
 #endif
+  variables: \code{R_HISTSIZE} controls the number of lines that are
+  saved (default 512), and \code{R_HISTFILE} sets the filename used for
+  the loading/saving of history if requested at the beginning/end of a
+  session (but not the default for these functions).  There is no limit
+  on the number of lines of history retained during a session, so
+  setting \code{R_HISTSIZE} to a large value has no penalty unless a
+  large file is actually generated.
+
+  These variables are read at the time of saving, so can be altered
+  within a session by the use of \code{\link{Sys.putenv}}.
 }
 \note{
   If you want to save the history (almost) every session, you can put a
